# esp32c6-no-std-rust

./: Cargo.toml
