[package]
name = "esp32c6-no-std-rust"
version = "0.1.0"
authors = ["Reza Saadat <onlysaadat@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true

[dependencies]
esp32c6-hal = "0.8.0"
esp-backtrace = { version = "0.11.0", features = ["esp32c6", "panic-handler", "exception-handler", "println"] }
esp-println = { version = "0.9.0", features = ["esp32c6"] }

